--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -156,43 +156,12 @@ services:
       logging_jobname: "containerlogs"
     restart: unless-stopped
 
-  # django-worker:
-  #   command: python manage.py rqworker
-  #   build:
-  #     context: ./django
-  #     dockerfile: Dockerfile.development
-  #   environment:
-  #     DOMAIN_NAME: ${DOMAIN_NAME}
-  #     TARGET_URL: ${TARGET_URL}
-  #     DB_HOST: ${DB_HOST}
-  #     MYSQL_PORT: ${MYSQL_PORT}
-  #     DJANGO_DATABASE: ${DJANGO_DATABASE}
-  #     DJANGO_USER: ${DJANGO_USER}
-  #     DJANGO_PASSWORD: ${DJANGO_PASSWORD}
-  #     STRIPE_PUBLISHABLE_KEY: ${STRIPE_PUBLISHABLE_KEY}
-  #     STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
-  #     STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET}
-  #     REDIS_HOST: ${REDIS_HOST}
-  #     REDIS_PORT: ${REDIS_PORT}
-  #     REDIS_DB: ${REDIS_DB}
-  #     REDIS_USER: ${REDIS_USER}
-  #     REDIS_PASS: ${REDIS_PASS}
-  #   volumes:
-  #     - ./django:/app
-  #   depends_on:
-  #     - db
-  #   labels:
-  #     logging: "promtail"
-  #     logging_jobname: "containerlogs"
-  #   restart: unless-stopped
-
   wordpress:
     build:
       context: ./wordpress
     volumes:
       - ./wordpress/wp-config.php:/var/www/html/wp-config.php
       - ./wordpress/wp-content:/var/www/html/wp-content
-      # - ./wordpress/wp-cli.phar:/var/www/html/wp-cli.phar
     expose:
       - "80"
     ports:
@@ -250,8 +219,6 @@ services:
       - ./certbot/www:/var/www/certbot
       - ./static:/static
       - ./frontend/node_modules:/node_modules
-      # - nginx_data:/usr/local/openresty/nginx/logs
-      # - geoupdate_data:/var/lib/GeoIP/
     ports:
       - "80:80"
       - "443:443"
@@ -280,126 +247,100 @@ services:
       logging_jobname: "containerlogs"
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
-  prometheus:
-    image: prom/prometheus:latest
-    restart: unless-stopped
-    volumes:
-      - prometheus_data:/prometheus
-      - ./prometheus/:/etc/prometheus/
-    ports:
-      - 127.0.0.1:9090:9090
-    labels:
-      logging: "promtail"
-      logging_jobname: "containerlogs"
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--web.enable-lifecycle'
-
-  node-exporter:
-    image: prom/node-exporter:latest
-    container_name: node-exporter
-    restart: unless-stopped
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
-    command:
-      - '--path.procfs=/host/proc'
-      - '--path.rootfs=/rootfs'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
-    expose:
-      - 9100
-
-  influxdb:
-    image: influxdb:latest
-    ports:
-      - 127.0.0.1:8086:8086
-    volumes:
-      - influxdb_data:/var/lib/influxdb
-    environment:
-      INFLUXDB_DB: ${INFLUXDB_NAME}
-      INFLUXDB_ADMIN_USER: ${INFLUXDB_USER}
-      INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_PASS}
-    labels:
-      logging: "promtail"
-      logging_jobname: "containerlogs"
-
-  grafana:
-    image: grafana/grafana:latest
-    restart: unless-stopped
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana/grafana-datasources.yml:/etc/grafana/provisioning/datasources/datasources.yaml
-    environment:
-      GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER}
-      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD}
-      GF_INSTALL_PLUGINS: 'grafana-clock-panel,grafana-simple-json-datasource,grafana-worldmap-panel,grafana-piechart-panel'
-    ports:
-      - 127.0.0.1:3060:3000
-    labels:
-      logging: "promtail"
-      logging_jobname: "containerlogs"
-
-  loki:
-    image: grafana/loki:latest
-    ports:
-      - 127.0.0.1:3100:3100
-    command: -config.file=/etc/loki/local-config.yaml
-    volumes:
-      - ./loki:/etc/loki
-      - loki_data:/loki
-    labels:
-      logging: "promtail"
-      logging_jobname: "containerlogs"
-
-  promtail:
-    image:  grafana/promtail:latest
-    container_name: promtail
-    volumes:
-      - ./promtail:/etc/promtail
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - /var/run/docker.sock:/var/run/docker.sock
-    command: -config.file=/etc/promtail/docker-config.yaml
-    depends_on:
-      - loki
-    labels:
-      logging: "promtail"
-      logging_jobname: "containerlogs"
-
-  # geoip2influx:
-  #   image: gilbn/geoip2influx:latest
-  #   environment:
-  #     - PUID=1000
-  #     - PGID=1000
-  #     - TZ=America/Los_Angeles
-  #     - INFLUX_HOST=${INFLUXDB_HOST}
-  #     - INFLUX_HOST_PORT=${INFLUXDB_PORT}
-  #     - MAXMINDDB_LICENSE_KEY=${MAXMINDDB_LICENSE_KEY}
-  #   volumes:
-  #     # - /path/to/appdata/geoip2influx:/config
-  #     - nginx_data:/config/log/nginx/
+  # prometheus:
+  #   image: prom/prometheus:latest
   #   restart: unless-stopped
-
-  # geoupdate:
-  #   image: maxmindinc/geoipupdate:latest
-  #   environment:
-  #     - GEOIPUPDATE_ACCOUNT_ID=${GEOIPUPDATE_ACCOUNT_ID}
-  #     - GEOIPUPDATE_LICENSE_KEY=${MAXMINDDB_LICENSE_KEY}
-  #     - GEOIPUPDATE_EDITION_IDS=${GEOIPUPDATE_EDITION_IDS}
   #   volumes:
-  #     - geoupdate_data:/usr/share/GeoIP
+  #     - prometheus_data:/prometheus
+  #     - ./prometheus/:/etc/prometheus/
+  #   ports:
+  #     - 127.0.0.1:9090:9090
+  #   labels:
+  #     logging: "promtail"
+  #     logging_jobname: "containerlogs"
+  #   command:
+  #     - '--config.file=/etc/prometheus/prometheus.yml'
+  #     - '--storage.tsdb.path=/prometheus'
+  #     - '--web.console.libraries=/etc/prometheus/console_libraries'
+  #     - '--web.console.templates=/etc/prometheus/consoles'
+  #     - '--web.enable-lifecycle'
+
+  # node-exporter:
+  #   image: prom/node-exporter:latest
+  #   container_name: node-exporter
   #   restart: unless-stopped
+  #   volumes:
+  #     - /proc:/host/proc:ro
+  #     - /sys:/host/sys:ro
+  #     - /:/rootfs:ro
+  #   command:
+  #     - '--path.procfs=/host/proc'
+  #     - '--path.rootfs=/rootfs'
+  #     - '--path.sysfs=/host/sys'
+  #     - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+  #   expose:
+  #     - 9100
+
+  # influxdb:
+  #   image: influxdb:latest
+  #   ports:
+  #     - 127.0.0.1:8086:8086
+  #   volumes:
+  #     - influxdb_data:/var/lib/influxdb
+  #   environment:
+  #     INFLUXDB_DB: ${INFLUXDB_NAME}
+  #     INFLUXDB_ADMIN_USER: ${INFLUXDB_USER}
+  #     INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_PASS}
+  #   labels:
+  #     logging: "promtail"
+  #     logging_jobname: "containerlogs"
+
+  # grafana:
+  #   image: grafana/grafana:latest
+  #   restart: unless-stopped
+  #   volumes:
+  #     - grafana_data:/var/lib/grafana
+  #     - ./grafana/grafana-datasources.yml:/etc/grafana/provisioning/datasources/datasources.yaml
+  #   environment:
+  #     GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER}
+  #     GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD}
+  #     GF_INSTALL_PLUGINS: 'grafana-clock-panel,grafana-simple-json-datasource,grafana-worldmap-panel,grafana-piechart-panel'
+  #   ports:
+  #     - 127.0.0.1:3060:3000
+  #   labels:
+  #     logging: "promtail"
+  #     logging_jobname: "containerlogs"
+
+  # loki:
+  #   image: grafana/loki:latest
+  #   ports:
+  #     - 127.0.0.1:3100:3100
+  #   command: -config.file=/etc/loki/local-config.yaml
+  #   volumes:
+  #     - ./loki:/etc/loki
+  #     - loki_data:/loki
+  #   labels:
+  #     logging: "promtail"
+  #     logging_jobname: "containerlogs"
+
+  # promtail:
+  #   image:  grafana/promtail:latest
+  #   container_name: promtail
+  #   volumes:
+  #     - ./promtail:/etc/promtail
+  #     - /var/lib/docker/containers:/var/lib/docker/containers:ro
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #   command: -config.file=/etc/promtail/docker-config.yaml
+  #   depends_on:
+  #     - loki
+  #   labels:
+  #     logging: "promtail"
+  #     logging_jobname: "containerlogs"
 
 volumes:
   db_data: {}
   redis_data: {}
-  prometheus_data: {}
-  grafana_data: {}
-  loki_data: {}
-  influxdb_data: {}
-  # geoupdate_data: {}
-  # nginx_data: {}
+  # prometheus_data: {}
+  # grafana_data: {}
+  # loki_data: {}
+  # influxdb_data: {}
